add icons into menu items - now for linux png only

--- a/apla.lpi
+++ b/apla.lpi
@@ -236,7 +236,7 @@
         <PackageName Value="FCL"/>
       </Item4>
     </RequiredPackages>
-    <Units Count="9">
+    <Units Count="11">
       <Unit0>
         <Filename Value="apla.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -288,6 +288,14 @@
         <Filename Value="uapp.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit8>
+      <Unit9>
+        <Filename Value="OsUtils.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit9>
+      <Unit10>
+        <Filename Value="uOsUtils.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit10>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
